<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.VerificationActivity">

    <TextView
        android:id="@+id/labelVerifyOtp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTopFromTop"
        android:singleLine="true"
        android:text="@string/verifyOtp_Label"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeLarge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelEnterOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:singleLine="true"
        android:text="@string/enterOtp_Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelVerifyOtp" />

    <TextView
        android:id="@+id/labelMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTopMobileNumber_VerificationAcitivity"
        android:layout_marginEnd="@dimen/marginTopMobileNumber_VerificationAcitivity"
        android:singleLine="true"
        android:text="@string/mobileNumber_Label"
        app:layout_constraintEnd_toStartOf="@+id/userPhoneNumber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEnterOtp" />

    <TextView
        android:id="@+id/userPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopMobileNumber_VerificationAcitivity"
        android:text="@string/MobileNumberValue_Label"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/labelMobileNumber"
        app:layout_constraintTop_toBottomOf="@+id/labelEnterOtp" />

    <com.chaos.view.PinView
        android:id="@+id/pinViewOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTopPinView_VerificationActivity"
        android:layout_marginEnd="@dimen/marginEnd"
        android:hint="@string/otp_PinVIew"
        android:inputType="number"
        style="@style/PinWidget.PinView"
        app:viewType="rectangle"
        android:itemBackground="@drawable/custom_edit_text"
        app:flow_horizontalAlign="center"
        app:itemHeight="50dp"
        app:itemSpacing="40dp"
        app:itemWidth="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelMobileNumber"
        app:lineColor="@color/white"
        app:lineHeight="0dp"
        app:lineWidth="0dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/btnHeight"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEnd"
        android:backgroundTint="@color/button1"
        android:text="@string/login_Button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="@dimen/textSizeSmall"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginHorizontalTimer_VerificationActivity"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginHorizontalTimer_VerificationActivity"
        android:text="@string/timer_Label"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinViewOtp" />

</androidx.constraintlayout.widget.ConstraintLayout>