<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".ui.fragments.GetOtpFragment">

    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/slider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/marginTop"
        android:minWidth="@dimen/sliderMinDimension"
        android:minHeight="@dimen/sliderMinDimension"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:sliderAnimationDuration="600"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorEnabled="true"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="@color/imageSliderDotSelected"
        app:sliderIndicatorUnselectedColor="@color/imageSliderDotUnselected"
        app:sliderScrollTimeInSec="1" />

    <TextView
        android:id="@+id/labelSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEnd"
        android:text="@string/signUp_Label"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeLarge"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/edTextPhone"
        android:layout_width="0dp"
        android:layout_height="@dimen/viewHeight"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEnd"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:textSize="@dimen/textSizeSmall"
        android:hint="@string/phoneNumber_EditText"
        android:inputType="phone"
        android:paddingStart="@dimen/paddingStart"
        android:paddingEnd="@dimen/paddingEnd"
        app:layout_constraintBottom_toTopOf="@+id/btnGetOtp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelSignUp" />

    <Button
        android:id="@+id/btnGetOtp"
        android:layout_width="0dp"
        android:layout_height="@dimen/btnHeight"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEnd"
        android:backgroundTint="@color/button1"
        android:text="@string/GetOTP_button"
        android:textSize="@dimen/textSizeSmall"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTextPhone" />

    <TextView
        android:id="@+id/labelAccountMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEndAccountExistsLabel_LoginAcitivity"
        android:layout_marginBottom="22dp"
        android:text="@string/existingAccount_Label"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/labelLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetOtp" />

    <TextView
        android:id="@+id/labelLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="22dp"
        android:text="@string/loginLink_Label"
        android:textColor="@color/URL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/labelAccountMsg"
        app:layout_constraintTop_toBottomOf="@+id/btnGetOtp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>